@@ -1,3 +1,8 @@
+2005-05-25  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/21709
+	* gcc.dg/pr21709-1.c: New test case.
+
 2005-05-23  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* gcc.dg/20050510-1.c: New test.
